--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -44,10 +44,10 @@
 											<h3>Why you should wear a mask</h3>
 										</header>
 										<ul>
-											<li> Coronavirus is spread by droplets having flown out of our mouths. To prevent these droplets from coming out of our mouths and preventing these droplets from entering into our respiratory system, we wear masks. </li>
-											<li> Studies show that mask-wearing easily reduces the possibility of spreading and receiving coronavirus. </li>
-											<li> Hong Kong is a great example showing how wearing masks can save lives. Despite having a similar density and proximity to Wuhan (the epicenter of the Coronavirus), it has only 4 coronavirus deaths, compared to Wuhan's 2,500. </li>
-											<li> When the Czech Republic started using masks, it greatly reduced its number of cases and deaths per day. </li>
+											<li> Coronavirus is spread by droplets coming out of peoples’ mouths. To prevent these droplets from exiting and or entering into our respiratory system, we wear masks.</li>
+											<li> Studies show that mask-wearing easily reduces the possibility of spreading and being exposed to the coronavirus. </li>
+											<li> Hong Kong is a great example showing how wearing masks can save lives. Despite having a similar population density and proximity  to Wuhan (the epicenter of the Coronavirus), it has only 4 coronavirus deaths, compared to Wuhan's 2,500. </li>
+											<li> When the Czech Republic started using masks, it greatly reduced its number of cases and deaths per day by almost half. </li>
 										</ul>
 									</section>
 									<section class="box">
