--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -77,10 +77,10 @@
 										</section>
 										<section>
 											<header>
-												<h2>To Mask or Not to Mask: The Problem</h2>
+												<h2>To Mask or Not to Mask: The Debate</h2>
 											</header>
 											<p>
-												Hidalgo's decision to mandate face covering while out in public is a risky and most definitely polarizing move, with the great debate between citizens' rights and government control the victim. This issue of public health and safety was definitely an aggressive move, and many are arguing whether it is constitutional or not. Under Chapter 418 of the Texas Government Code, a county judge can serve as an emergency management director of their county and have the same power granted to the governor. When a crisis like the coronavirus or Hurricane Harvey hits, the judge or mayor can control the movement of people of their county. In the event of COVID-19, Lina Hidalgo used her granted power to pass the mask law. A petition claims that Hidalgo broke the law because Greg Abbott, governor of Texas, has not put on as restrictive orders. They also add that the mandate infringes on their personal "liberty and freedom". Because of public outcry and the threat of being sued Lina Hidalgo changed the order from a mandate to a suggestion.
+												Judge Hidalgo's decision to mandate face covering while out in public was a polarizing move, sparking heated debates about citizens' rights and government control. This legislation of public health and safety was definitely an aggressive move, and many are arguing whether it is constitutional or not. Under Chapter 418 of the Texas Government Code, a county judge can serve as an emergency management director of their county and have the same power as granted to the Governor. When a crisis like the coronavirus or Hurricane Harvey hits, the county judge can control the movement of people across their jurisdiction. In the event of COVID-19, Judge Hidalgo used her power to pass the mask law on April 23rd, 2020. A petition claims that Judge Hidalgo broke the law because Greg Abbott, Governor of Texas, has not put on as restrictive orders, so she was overstepping her power. They also add that the mandate infringes on their personal "liberty and freedom". Because of public outcry and the threat of being sued, on May 28th, 2020, Judge Hidalgo changed the order from a mandate to a recommendation. 
 											</p>
 										</section>
 									</article>
