--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -55,7 +55,7 @@
 											<h3>More information on the mask order</h3>
 										</header>
 										<ul class="divided">
-											<li><a href="https://www.texastribune.org/">Texas Tribune</a></li>
+											<li><a href="https://www.texastribune.org/series/coronavirus-texas-cases-san-antonio//">Texas Tribune</a></li>
 											<li><a href="https://www.houstonchronicle.com/">Houston Chronicle</a></li>
 											<li><a href="https://www.cdc.gov/">Center for Disease Control</a></li>
 										</ul>
