--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -46,9 +46,10 @@
 											<h2>Mask Advice</h2>
 										</header>
 										<p>
-											Face masks are critical to stopping the coronavirus as they block germs containing the virus from entering the respiratory system (nose and mouth especially). However, they only work when applied onto the face properly, protecting all the vulnerable areas. 
+											Face masks are critical to stopping the coronavirus as they block droplets containing the virus from entering the respiratory system (nose and mouth especially). However, they only work when worn and taken off properly, following the appropiate steps. 
 										</p>
 										<section class="box">
+											<iframe width="560" height="315" src="https://www.youtube.com/embed/EAj12GKuAEk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 											<header>
 												<h3>Making Homemade Masks by the CDC</h3>
 											</header>
