--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -41,7 +41,7 @@
 
 								<!-- Content -->
 									<article class="box post">
-										<a href="#" class="image featured"><img src="images/maskwearers2.jpeg" alt="" /></a>
+										<a href="#" class="image featured"><img  width = "560" src="images/maskwearers2.jpeg" alt="" /></a>
 										<header>
 											<h2>Mask Advice</h2>
 										</header>
@@ -49,10 +49,10 @@
 											Face masks are critical to stopping the coronavirus as they block droplets containing the virus from entering the respiratory system (nose and mouth especially). However, they only work when worn and taken off properly, following the appropiate steps. 
 										</p>
 										<section class="box">
-											<iframe width="560" height="315" src="https://www.youtube.com/embed/EAj12GKuAEk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 											<header>
-												<h3>Making Homemade Masks by the CDC</h3>
+												<h3>Making Homemade Masks (Steps by the CDC)</h3>
 											</header>
+											<iframe width="560" height="315" src="https://www.youtube.com/embed/EAj12GKuAEk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 											<ol>
 												<li> Use a bandanna or other square of cloth measuring about 20 inches on each side. </li>
 												<li> Fold it in half. Then fold the top third down and the bottom third up so you have a long rectangle. </li>
