--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -50,9 +50,12 @@
 										</p>
 										<section class="box">
 											<header>
-												<h3>Making Homemade Masks (Steps by the CDC)</h3>
+												<h3>Making Homemade Masks</h3>
 											</header>
 											<iframe width="560" height="315" src="https://www.youtube.com/embed/EAj12GKuAEk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+											<header>
+												<h3>Steps given by the CDC</h3>
+											</header>
 											<ol>
 												<li> Use a bandanna or other square of cloth measuring about 20 inches on each side. </li>
 												<li> Fold it in half. Then fold the top third down and the bottom third up so you have a long rectangle. </li>
