--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -101,13 +101,18 @@
 										<header>
 											<h3>How to Remove a Mask</h3>
 										</header>
-										<p>Remember that things you touch (like groceries, doorknobs) can harbor the coronavirus, sometimes for days. </p>  
+										<p>Remember that things you touch like groceries and doorknobs can harbor the coronavirus, sometimes for days. </p>                                        
 										<ol> 
 											<li> The first thing you should do before taking off your mask is to remove and trash your gloves, then wash your hands. </li>
 											<li> Afterward, remove the left ear loop and slowly peel the mask from your face, subsequently detaching the right loop. </li>
 											<li> If the mask is disposable, throw it away immediately and wash your hands again. </li>
 											<li> If you follow these steps, then you will greatly decrease the chance of getting coronavirus. </li>
 										</ol>
+									</section>
+									<section class="box2">
+										<header>
+											<h3>Videos by the World Health Organization</h3>
+										</header>
 									</section>
 							</div>
 						</div>
