--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -53,6 +53,7 @@
 												<h3>Making Homemade Masks</h3>
 											</header>
 											<iframe width="560" height="315" src="https://www.youtube.com/embed/EAj12GKuAEk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+											<p> Source: Japanese Creations, 2020 </p>
 											</br>
 											<header>
 												<h3>Steps given by the CDC</h3>
@@ -86,6 +87,8 @@
 								<!-- Sidebar -->
 									<section class="box2">
 										<iframe class = "image featured" width="280" height="315" src="https://www.youtube.com/embed/M4olt47pr_o?start=61&end=100" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+										<p> Source: World Health Organization, 2020 </p>
+										</br>
 										<header>
 											<h3>How to Wear a Mask</h3>
 										</header>
@@ -98,6 +101,8 @@
 									</section>
 									<section class="box2">
 										<iframe class = "image featured" width="280" height="315" src="https://www.youtube.com/embed/M4olt47pr_o?start=101&end=127" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+										<p> Source: World Health Organization, 2020 </p>
+										</br>
 										<header>
 											<h3>How to Remove a Mask</h3>
 										</header>
@@ -108,11 +113,6 @@
 											<li> If the mask is disposable, throw it away immediately and wash your hands again. </li>
 											<li> If you follow these steps, then you will greatly decrease the chance of getting coronavirus. </li>
 										</ol>
-									</section>
-									<section class="box2">
-										<header>
-											<h3>Videos by the World Health Organization</h3>
-										</header>
 									</section>
 							</div>
 						</div>
