--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -45,26 +45,25 @@
 							<section class = "box">
 								<h3> Is the coronavirus still relevant? </h3> 
 								<p>
-									Despite lockdowns being lifted in some states, the coronavirus is still raging across the U.S. Scientists expect a "second wave" of the disease to hit again, and it is necessary for us to be prepared. 
-
+									Despite lockdowns being lifted in some states, the coronavirus is still raging across the U.S. Scientists expect a "second wave" of the disease to hit again, and it is necessary for us to be prepared. <a href = "https://www.cnn.com/2020/05/02/health/coronavirus-second-wave-fall-season/index.html" target  = "_blank"> Read more here </a> 
 								</p>
 							</section>
 							<section class = "box">
 								<h3> Why are masks important? </h3>
 								<p>
-									Masks protect coronavirus infected droplets from entering and exiting your mouth. If these droplets are unable to enter your respiratory system, then the contraction of coronavirus can be prevented.
+									Masks protect coronavirus infected droplets from entering and exiting your mouth. If these droplets are unable to enter your respiratory system, then the contraction of coronavirus can be prevented. <a href = "http://theatlantic.com/health/archive/2020/04/dont-wear-mask-yourself/610336/ target  = "_blank"> 
 								</p>
 							</section>
 							<section class = "box">
 								<h3> What types of materials are best for masks? </h3>
 								<p>
-									A study tested multiple different materials (cloth, wool, etc.) and checked their ability to stop the virus as well as breathability (because you can't have a mask without being able to breath). The top five materials to make a mask were listed as denim, bedsheets, paper towels, canvas, and shop towels. NOT SCARFS, NOT T-SHIRTS, NOT PILLOWCASES. The study recommends using more than one layer of fabric to ensure safety. 
+									A study tested multiple different materials (cloth, wool, etc.) and checked their ability to stop the virus as well as breathability (because you can't have a mask without being able to breath). The top five materials to make a mask were listed as denim, bedsheets, paper towels, canvas, and shop towels. NOT SCARFS, NOT T-SHIRTS, NOT PILLOWCASES. The study recommends using more than one layer of fabric to ensure safety. <a href = "https://www.huffpost.com/entry/best-coronavirus-face-mask-materials-new-study_l_5e99b576c5b6a92100e63129?utm_cam paign=share_facebook&ncid=engmodushpmg00000003&fbclid=IwAR1nrbwu_SjyiGmLolDIwcXWp dRq-4MwtccJSYFq2tha9eowwzD4PiY0t7A&guce_referrer=aHR0cHM6Ly93d3cuZmFjZWJvb2suY29tLw&guce_referrer_sig=AQAAACoLPCH7hG9VBVRSkaO50AeaULdgx5LnKhyLWNmT9zxyq8W1M8PYIjD1nEevshcsRArQ9RkeA_sCMsk1MEsI3jvEcRMKLsbgvKE59gDPXVlyqzIkBC_CTWDDftVgoQiNibWyjTN6HbcW4pTqiPFK5HkfZoWA8dgoPPdWslkJPZpW&guccounter=2. target = "_blank"> Read more here </a>  
 								</p>
 							</section>
 							<section class = "box">
 								<h3> When can I be "exempt" from wearing a mask? </h3>
 								<p>
-									If you are doing in action which does not require you to be around other people, you don't have to wear a mask. For example, walking outside does not require a mask, but shopping at the grocery store, in which other people can be close by and touch things that you touch, wearing a mask is critical.
+									If you are doing in action which does not require you to be around other people, you don't have to wear a mask. For example, walking outside does not require a mask, but shopping at the grocery store, in which other people can be close by and touch things that you touch, wearing a mask is critical. <a href = "https://newsnetwork.mayoclinic.org/discussion/covid-19-when-should-you-wear-a-face-mask/" target = "_blank"> Read more here </a>
 								</p>
 							</section>
 							<section class = "box">
@@ -72,12 +71,13 @@
 									<ol>
 										<li> The CDC recommends for those going out in public wearing a scarf or homemade mask to stop droplets from coming in contact with the mouth and preventing the spread of the virus to other people. See more on homemade masks to the right. </li>
 										<li> N-95 Masks are the most effective masks and can block 95 percent of particles .3 microns or larger, according to the FDA. They have a metal nose piece that the wearer can use to mold their face and have a snug fit, a filter built-in with air holes to make breathing easier, and ear loops that ensure a comfortable mask experience. BUT note that these masks are not a luxury and that they should be reserved for healthcare workers and other people on the frontline. </il>
-										<li> While not as effective as the N-95 mask, the surgical mask, often known as "the face mask", still provides the wearer protection from large droplets and splashes. They have ear loops and a rectangular shape (you'll see them on TV shows like Grey's Anatomy and ER), but their loose fit doesn't provide an absolute barrier against the coronavirus. Many doctors use them, so the CDC recommends that surgical masks also be spared for healthcare workers. The main problem with surgical masks is that they can only be used once, so it is important that we prevent mass shortages of these masks and instead try other methods of protection. </il>	
+										<li> While not as effective as the N-95 mask, the surgical mask, often known as "the face mask", still provides the wearer protection from large droplets and splashes. They have ear loops and a rectangular shape (you'll see them on TV shows like Grey's Anatomy and ER), but their loose fit doesn't provide an absolute barrier against the coronavirus. Many doctors use them, so the CDC recommends that surgical masks also be spared for healthcare workers. The main problem with surgical masks is that they can only be used once, so it is important that we prevent mass shortages of these masks and instead try other methods of protection. </li>	
 									</ol>
+									<a href = "https://www.click2houston.com/news/local/2020/04/29/a-guide-to-the-different-types-of-face-masks/?utm_source=facebook&utm_medium=social&utm_campaign=snd&utm_content=kprc2&fbclid=IwAR2hDEhxsGEgvS5TvG7SyUuhtW1ZZKpd1081acm2xGJvHRxGB5KzWAFtg70." target = "_blank"> Read more here </a>
 							</section>
 							<section class = "box">
 								<h3> Who should not wear masks? </h3>
-									<p> Children under the age of 2 should not wear masks as it will be difficult for them to breathe. Anyone else who has trouble breathing or is incapacitated does not have to wear a mask. 
+									<p> Children under the age of 2 should not wear masks as it will be difficult for them to breathe. Anyone else who has trouble breathing or is incapacitated does not have to wear a mask. <a href = "https://www.cdc.gov/coronavirus/2019-ncov/prevent-getting-sick/cloth-face-cover.html" target = "_blank"> Read more here </a>
 							</section>
 							<!-- <section>
 								<header>
