--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -72,10 +72,10 @@
 											</header>
 											<p>These resources will provide more information about COVID-19 and masks.</p>
 											<ul class="divided">
-												<li><a href="who.int">World Health Organization</a></li>
-												<li><a href="cdc.gov">Center for Disease Control</a></li>
-												<li><a href="https://www.mayoclinic.org/coronavirus-covid-19">Mayo Clinic</a></li>
-												<li><a href="https://www.houstonmethodist.org/coronavirus/coronavirus-resources/">Houston Methodist</a></li>
+												<li><a href="who.int" target = "_blank">World Health Organization</a></li>
+												<li><a href="cdc.gov" target = "_blank">Center for Disease Control</a></li>
+												<li><a href="https://www.mayoclinic.org/coronavirus-covid-19" target = "_blank">Mayo Clinic</a></li>
+												<li><a href="https://www.houstonmethodist.org/coronavirus/coronavirus-resources/" target = "_blank">Houston Methodist</a></li>
 											</ul>
 										</section>
 									</article>
