--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -51,7 +51,7 @@
 							<section class = "box">
 								<h3> Why are masks important? </h3>
 								<p>
-									Masks protect coronavirus infected droplets from entering and exiting your mouth. If these droplets are unable to enter your respiratory system, then the contraction of coronavirus can be prevented. <a href = "http://theatlantic.com/health/archive/2020/04/dont-wear-mask-yourself/610336/ target  = "_blank"> 
+									Masks protect coronavirus infected droplets from entering and exiting your mouth. If these droplets are unable to enter your respiratory system, then the contraction of coronavirus can be prevented. <a href = "http://theatlantic.com/health/archive/2020/04/dont-wear-mask-yourself/610336/ target  = "_blank"> Read more here </a>
 								</p>
 							</section>
 							<section class = "box">
