--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -77,7 +77,7 @@
 							</section>
 							<section class = "box">
 								<h3> Who should not wear masks? </h3>
-									<p> Children under the age of 2 should not wear masks as it will be difficult for them to breathe. Anyone else who has trouble breathing or is incapacitated does not have to wear a mask. <a href = "https://www.cdc.gov/coronavirus/2019-ncov/prevent-getting-sick/cloth-face-cover.html" target = "_blank"> Read more here </a>
+									<p> Children under the age of 2 should not wear masks as it will be difficult for them to breathe. Anyone else who has trouble breathing or is incapacitated should not wear a mask as their oxygen will be greatly restricted. <a href = "https://www.cdc.gov/coronavirus/2019-ncov/prevent-getting-sick/cloth-face-cover.html" target = "_blank"> Read more here </a>
 							</section>
 							<!-- <section>
 								<header>
