--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -36,7 +36,7 @@
 					<div class="container">
 
 						<!-- Content -->
-						  <article class="box post">
+						  <article class="box post" width = "600px">
 							<header>
 								<center> <h2> Mask FAQs </h2> </center>
 							</header>
