--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -63,7 +63,7 @@
 							<section class = "box">
 								<h3> When can I be "exempt" from wearing a mask? </h3>
 								<p>
-									If you are doing in action which does not require you to be around other people, you don't have to wear a mask. For example, walking outside does not require a mask, but shopping at the grocery store, in which other people can be close by and touch things that you touch, wearing a mask is critical. <a href = "https://newsnetwork.mayoclinic.org/discussion/covid-19-when-should-you-wear-a-face-mask/" target = "_blank"> Read more here </a>
+									If you are doing in action which does not require you to be around other people, you don't have to wear a mask. For example, walking outside while staying six feet away from other people does not require a mask, but shopping at the grocery store, in which other people can be close by and touch things that you touch, wearing a mask is critical. <a href = "https://newsnetwork.mayoclinic.org/discussion/covid-19-when-should-you-wear-a-face-mask/" target = "_blank"> Read more here </a>
 								</p>
 							</section>
 							<section class = "box">
