--- a/comment.html
+++ b/comment.html
@@ -1,67 +1,41 @@
+#respond {
+  margin-top: 40px;
+}
 
-  <div id="footer-wrapper" class="wrapper">
-<div class="title">Contact</div>
-<div id="footer" class="container">
-<header class="style1">
-</header>
-<div class="row 150%">
-<div class="6u 12u(mobile)">
-Contact Fc orm
-<section>
-<form method="post" action="https://formspree.io/imaitra@sjs.org">
-<div class="row 50%">
-<div class="6u 12u(mobile)">
-<input type="text" name="name" id="contact-name" placeholder="Name" />
-</div>
-<div class="6u 12u(mobile)">
-<input type="text" name="email" id="contact-email" placeholder="Email" />
-</div>
-</div>
-<div class="row 50%">
-<div class="12u">
-<textarea name="message" id="contact-message" placeholder="Message" rows="4"></textarea>
-</div>
-</div>
-<div class="row">
-<div class="12u">
-<ul class="actions">
-<li><input type="submit" class="style1" value="Send" /></li>
-<li><input type="reset" class="style2" value="Reset" /></li>
-</ul>
-</div>
-</div>
-</form>
-</section>
-</div>
-<div class="6u 12u(mobile)">
-Contact
-<section class="feature-list small">
-<div class="row">
-<div class="6u 12u(mobile)">
-<section>
-<h3></h3>
-<p>
+#respond input[type='text'],
+#respond input[type='email'], 
+#respond textarea {
+  margin-bottom: 10px;
+  display: block;
+  width: 100%;
 
-</p>
-</section>
-</div>
-<div class="6u 12u(mobile)">
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -o-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -khtml-border-radius: 5px;
+  border-radius: 5px;
 
-</div>
-</div>
-<div class="row">
-<div class="6u 12u(mobile)">
-<section>
+  line-height: 1.4em;
+}
 
-</section>
-</div>
-<div class="6u 12u(mobile)">
- 
-</div>
-</div>
-</section>
-</div>
-</div>
-<hr />
-</div>
+<div id="respond">
+
+  <h3>Leave a Comment</h3>
+
+  <form action="post_comment.php" method="post" id="commentform">
+
+    <label for="comment_author" class="required">Your name</label>
+    <input type="text" name="comment_author" id="comment_author" value="" tabindex="1" required="required">
+
+    <label for="comment" class="required">Your message</label>
+    <textarea name="comment" id="comment" rows="10" tabindex="4"  required="required"></textarea>
+
+    <-- comment_post_ID value hard-coded as 1 -->
+    <input type="hidden" name="comment_post_ID" value="1" id="comment_post_ID" />
+    <input name="submit" type="submit" value="Submit comment" />
+
+  </form>
+
 </div>
