--- a/index.html
+++ b/index.html
@@ -439,6 +439,12 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script>
+				var APP_KEY = '<?php echo(APP_KEY); ?>';
+			</script>
+			<script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>	
+			<script src="http://js.pusher.com/1.11/pusher.min.js"></script>
+			<script src="js/app.js"></script>
 
 	</body>
 </html>
