--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<?php
+require('pusher_config.php');
+require('Persistence.php');
+$comment_post_ID = 1;
+$db = new Persistence();
+$comments = $db->get_comments($comment_post_ID);
+$has_comments = (count($comments) > 0);
+?>
+
 <!DOCTYPE HTML>
 <!--
 	Dopetrope by HTML5 UP
