--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -60,6 +60,13 @@
 											<li><a href="https://www.cdc.gov/" target = "_blank">Center for Disease Control</a></li>
 										</ul>
 									</section>
+									<section class="box">
+										<header>
+											<h3>The Masketeer Comment Forum</h3>
+										</header>
+										<p> Give your opinion on the coronavirus pandmemic? Is the mask order constititutional? Should we reopen </p>
+										<a href = "masketeercommentforum.com" target "_blank"> Masketeer Forum </a>
+									</section>
 
 							</div>
 							<div class="col-8 col-12-medium imp-medium">
