--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -64,8 +64,8 @@
 										<header>
 											<h3>The Masketeer Comment Forum</h3>
 										</header>
-										<p> Give your opinion on the coronavirus pandmemic? Is the mask order constititutional? Should we reopen </p>
-										<a href = "masketeercommentforum.com" target "_blank"> Masketeer Forum </a>
+										<p> Give your opinion on the coronavirus pandmemic? Is the mask order constititutional? Should we reopen? </p>
+										<a href = "www.masketeercommentforum.com" target "_blank"> Masketeer Forum </a>
 									</section>
 
 							</div>
