--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -65,7 +65,7 @@
 											<h3>The Masketeer Comment Forum</h3>
 										</header>
 										<p> Give your opinion on the coronavirus pandmemic? Is the mask order constititutional? Should we reopen? </p>
-										<a href = "http://masketeercommentforum.com" target "_blank"> Masketeer Forum </a>
+										<a href = "http://masketeercommentforum.com/" target "_blank"> Masketeer Forum </a>
 									</section>
 
 							</div>
