--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -60,13 +60,6 @@
 											<li><a href="https://www.cdc.gov/" target = "_blank">Center for Disease Control</a></li>
 										</ul>
 									</section>
-									<section class="box">
-										<header>
-											<h3>The Masketeer Comment Forum</h3>
-										</header>
-										<p> Give your opinion on the coronavirus pandmemic? Is the mask order constititutional? Should we reopen? </p>
-										<a href = "http://masketeercommentforum.com/" target "_blank"> Masketeer Forum </a>
-									</section>
 
 							</div>
 							<div class="col-8 col-12-medium imp-medium">
@@ -90,6 +83,12 @@
 												Judge Hidalgo's decision to mandate face covering while out in public was a polarizing move, sparking heated debates about citizens' rights and government control. This legislation of public health and safety was definitely an aggressive move, and many are arguing whether it is constitutional or not. Under Chapter 418 of the Texas Government Code, a county judge can serve as an emergency management director of their county and have the same power as granted to the Governor. When a crisis like the coronavirus or Hurricane Harvey hits, the county judge can control the movement of people across their jurisdiction. In the event of COVID-19, Judge Hidalgo used her power to pass the mask law on April 23rd, 2020. A petition claims that Judge Hidalgo broke the law because Greg Abbott, Governor of Texas, has not put on as restrictive orders, so she was overstepping her power. They also add that the mandate infringes on their personal "liberty and freedom". Because of public outcry and the threat of being sued, on May 28th, 2020, Judge Hidalgo changed the order from a mandate to a recommendation. 
 											</p>
 										</section>
+										</br>
+										<header>
+											<h3>The Masketeer Comment Forum</h3>
+										</header>
+										<p> Give your opinion on the coronavirus pandmemic. Is overall community good more important than the individual right? Should we reopen? </p>
+										<a href = "http://masketeercommentforum.com/" target "_blank"> Masketeer Forum </a>
 									</article>
 
 							</div>
