--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 								<li><a href="left-sidebar.html">The Mask Order</a></li>
 								<li><a href="right-sidebar.html">Mask Advice</a></li>
 								<li><a href="no-sidebar.html">Mask FAQs</a></li>
+								<li><a href="http://masketeercommentforum.com">Masketeer Comment Forum</a></li>
 							</ul>
 						</nav>
 
