--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -27,6 +27,7 @@
 							<li class="current" color = "#008CBA"><a href="left-sidebar.html">The Mask Order</a></li>
 							<li><a href="right-sidebar.html">Mask Advice</a></li>
 							<li><a href="no-sidebar.html">Mask FAQs</a></li>
+							<li><a href="http://masketeercommentforum.com">Masketeer Comment Forum</a></li>
 						</ul>
 					</nav>
 
