--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 									<section class="last">
 										<a style="text-decoration:none" href="no-sidebar.html"><i class="icon solid featured alt2 fa-question"></i> </a>									
 										<header>
-											<a style="text-decoration:none" href="no-sidebar.html"> <h2>Masketeer #3</h2> </a>
+											<a style="text-decoration:none" href="no-sidebar.html"> <h2>Masketeer #3 - Mask FAQs</h2> </a>
 										</header>
 										<p>Finally, answer your biggest questions about masks and mask safety to ensure you're confident you'll be safe when going out during the coronavirus.</p>
 									</section>
